--- a/DbBackupper/Properties/Resources.fr.resx
+++ b/DbBackupper/Properties/Resources.fr.resx
@@ -118,123 +118,123 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AddCreateDb" xml:space="preserve">
-    <value>Добавить CREATE DATABASE</value>
+    <value>Ajout CREATE DATABASE</value>
     <comment>Добавить CREATE DATABASE</comment>
   </data>
   <data name="AddDropDb" xml:space="preserve">
-    <value>Добавить DROP DATABASE</value>
+    <value>Ajouter DROP DATABASE</value>
     <comment>Добавить DROP DATABASE</comment>
   </data>
   <data name="ApplicationTitle" xml:space="preserve">
-    <value>Генератор резервных копий</value>
+    <value>Générateur de secours</value>
     <comment>Генератор резервных копий</comment>
   </data>
   <data name="BackupDump" xml:space="preserve">
-    <value>Создание резервной копии</value>
+    <value>Sauvegarde</value>
     <comment>Создание резервной копии</comment>
   </data>
   <data name="BackupSettings" xml:space="preserve">
-    <value>Параметры резервирования</value>
+    <value>Paramètres de sauvegarde</value>
     <comment>Параметры резервирования</comment>
   </data>
   <data name="ChangeLanguage" xml:space="preserve">
-    <value>Сменить язык</value>
+    <value>Changer la langue</value>
     <comment>Сменить язык</comment>
   </data>
+  <data name="ChangeLanguageRequest" xml:space="preserve">
+    <value>Après avoir changé la langue, le programme reprend. Vous voulez changer la langue?</value>
+    <comment>После смены языка произойдет перезапуск программы. Вы хотите сменить язык?</comment>
+  </data>
   <data name="CleanBeforeRestore" xml:space="preserve">
-    <value>Очистить перед восстановлением</value>
+    <value>Effacer avant la récupération</value>
     <comment>Очистить перед восстановлением</comment>
   </data>
   <data name="ConnectionSettings" xml:space="preserve">
-    <value>Настройки подключения</value>
+    <value>Paramètres de connexion</value>
     <comment>Настройки подключения</comment>
   </data>
   <data name="CreateDb" xml:space="preserve">
-    <value>Создать БД</value>
+    <value>Création de la base</value>
     <comment>Создать БД</comment>
   </data>
   <data name="CreateDump" xml:space="preserve">
-    <value>Создать резервную копию</value>
+    <value>Créer une sauvegarde</value>
     <comment>Создать резервную копию</comment>
   </data>
   <data name="DatabaseName" xml:space="preserve">
-    <value>Имя БД</value>
+    <value>Base de données de nom</value>
     <comment>Имя БД</comment>
   </data>
   <data name="DataOnly" xml:space="preserve">
-    <value>Только данные</value>
+    <value>Données uniquement</value>
     <comment>Только данные</comment>
   </data>
   <data name="File" xml:space="preserve">
-    <value>Файл</value>
+    <value>Fichier</value>
     <comment>Файл</comment>
   </data>
   <data name="FileFormat" xml:space="preserve">
-    <value>Формат файла</value>
+    <value>Format de fichier</value>
     <comment>Формат файла</comment>
   </data>
   <data name="GetDbStructure" xml:space="preserve">
-    <value>Получить структуру БД</value>
+    <value>Obtenez la structure de base de données</value>
     <comment>Получить структуру БД</comment>
   </data>
   <data name="Host" xml:space="preserve">
-    <value>IP-адрес</value>
-    <comment>IP-адресс</comment>
+    <value>Adresse IP</value>
+    <comment>IP-адрес</comment>
+  </data>
+  <data name="LanguageChanging" xml:space="preserve">
+    <value>Changer la langue</value>
+    <comment>Смена языка</comment>
   </data>
   <data name="Location" xml:space="preserve">
-    <value>Расположение</value>
+    <value>Emplacement</value>
     <comment>Расположение</comment>
   </data>
   <data name="ObjectsTypes" xml:space="preserve">
-    <value>Типы объектов</value>
+    <value>Types d'objets</value>
     <comment>Типы объектов</comment>
   </data>
   <data name="Password" xml:space="preserve">
-    <value>Пароль</value>
+    <value>Mot de passe</value>
     <comment>Пароль</comment>
   </data>
   <data name="Port" xml:space="preserve">
-    <value>Порт</value>
+    <value>Port</value>
     <comment>Порт</comment>
   </data>
   <data name="RestoreDump" xml:space="preserve">
-    <value>Восстановление из резервной копии</value>
+    <value>Restauration depuis la sauvegarde</value>
     <comment>Восстановление из резервной копии</comment>
   </data>
   <data name="RestoreFromDump" xml:space="preserve">
-    <value>Восстановить из резервной копии</value>
+    <value>Restaurer de la sauvegarde</value>
     <comment>Восстановить из резервной копии</comment>
   </data>
   <data name="RestoreSettings" xml:space="preserve">
-    <value>Параметры восстановления</value>
+    <value>Options de récupération</value>
     <comment>Параметры восстановления</comment>
   </data>
   <data name="SchemaOnly" xml:space="preserve">
-    <value>Только схема</value>
+    <value>Seul régime</value>
     <comment>Только схема</comment>
   </data>
   <data name="UserName" xml:space="preserve">
-    <value>Имя пользователя</value>
+    <value>Nom d'utilisateur</value>
     <comment>Имя пользователя</comment>
   </data>
-  <data name="ChangeLanguageRequest" xml:space="preserve">
-    <value>После смены языка произойдет перезапуск программы. Вы хотите сменить язык?</value>
-    <comment>После смены языка произойдет перезапуск программы. Вы хотите сменить язык?</comment>
-  </data>
-  <data name="LanguageChanging" xml:space="preserve">
-    <value>Смена языка</value>
-    <comment>Смена языка</comment>
-  </data>
   <data name="Events" xml:space="preserve">
-    <value>События</value>
+    <value>Événements</value>
     <comment>События</comment>
   </data>
   <data name="Schemas" xml:space="preserve">
-    <value>Схемы</value>
+    <value>Régimes</value>
     <comment>Схемы</comment>
   </data>
   <data name="SelectAll" xml:space="preserve">
-    <value>Выбрать всё</value>
+    <value>Tout sélectionner</value>
     <comment>Выбрать всё</comment>
   </data>
 </root>
