--- a/DbBackupper/Properties/Resources.fr.resx
+++ b/DbBackupper/Properties/Resources.fr.resx
@@ -249,4 +249,16 @@
     <value>Le stockage des données dans une base de données</value>
     <comment>Сохранение данных в БД</comment>
   </data>
+  <data name="CustomFormat" xml:space="preserve">
+    <value>Douane</value>
+    <comment>Настраиваемый</comment>
+  </data>
+  <data name="PlainFormat" xml:space="preserve">
+    <value>Simple</value>
+    <comment>Простой</comment>
+  </data>
+  <data name="Tar" xml:space="preserve">
+    <value>Tar</value>
+    <comment>Tar</comment>
+  </data>
 </root>
