--- a/DbBackupper/Properties/Resources.fr.resx
+++ b/DbBackupper/Properties/Resources.fr.resx
@@ -205,7 +205,7 @@
     <value>Port</value>
     <comment>Порт</comment>
   </data>
-  <data name="RestoreDump" xml:space="preserve">
+  <data name="Restore" xml:space="preserve">
     <value>Restauration depuis la sauvegarde</value>
     <comment>Восстановление из резервной копии</comment>
   </data>
@@ -242,23 +242,23 @@
     <comment>Обновление данных в БД</comment>
   </data>
   <data name="LoadingFromDb" xml:space="preserve">
-    <value>Chargement des données de la base de données</value>
-    <comment>Загрузка данных из БД</comment>
+    <value>Restauration depuis la sauvegarde</value>
+    <comment>Восстановлении из резервной копии</comment>
   </data>
-  <data name="LoadingIntoDb" xml:space="preserve">
-    <value>Le stockage des données dans une base de données</value>
-    <comment>Сохранение данных в БД</comment>
+  <data name="Backup" xml:space="preserve">
+    <value>Sauvegarde</value>
+    <comment>Создание резервной копии</comment>
   </data>
   <data name="CustomFormat" xml:space="preserve">
-    <value>Douane</value>
-    <comment>Настраиваемый</comment>
+    <value>Binaire</value>
+    <comment>Бинарный</comment>
   </data>
   <data name="PlainFormat" xml:space="preserve">
-    <value>Simple</value>
-    <comment>Простой</comment>
+    <value>SQL-text</value>
+    <comment>Текстовый</comment>
   </data>
-  <data name="Tar" xml:space="preserve">
-    <value>Tar</value>
-    <comment>Tar</comment>
+  <data name="TarFormat" xml:space="preserve">
+    <value>Archive</value>
+    <comment>Архивный</comment>
   </data>
 </root>
