Перешел на систему протоколирования (логирование Голубкова). Мелкие правки. Добавлен словарь ресурсов для кодов ошибок от PostgreSQL

--- a/DbBackupper/Properties/Resources.resx
+++ b/DbBackupper/Properties/Resources.resx
@@ -265,4 +265,10 @@
     <value>Большие данные</value>
     <comment>Большие данные</comment>
   </data>
+  <data name="AppName" xml:space="preserve">
+    <value>DbBackupper</value>
+  </data>
+  <data name="LogSource" xml:space="preserve">
+    <value>Application</value>
+  </data>
 </root>
