--- a/DbBackupper/Resources/Messages.resx
+++ b/DbBackupper/Resources/Messages.resx
@@ -253,4 +253,7 @@
     <value>Выбранная БД имеет активные соединения. Вы хотите отключить их?</value>
     <comment>Выбранная БД имеет активные соединения. Вы хотите отключить их?</comment>
   </data>
+  <data name="SuchDbAlreadyExists" xml:space="preserve">
+    <value>БД с указанным именем уже существует. Вы хотите перезаписать ее?</value>
+  </data>
 </root>
